<resources>
    <string name="app_name">DistanceTrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
    <string name="permission_description">Welcome to distance tracker. In order to use our
        application we will first need to request a permission from you. Otherwise we will
        not be able to provide you with your service. If you agree and wish to continue tap on
        the button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="map_icon">Map Icon</string>
    <string name="counter_start_digit">3</string>
    <string name="tap_on_my_location_button">Tap On My Location Button</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="go">GO</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="share">Share</string>
    <string name="_0_00km">0:00km</string>
    <string name="result">%1$s km</string>
</resources>